
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Core Gui Widgets OpenGL Qml Quick QUIET)

# QT5_ADD_RESOURCES(PROTOTYPE_RCS)
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpic")
    set(DCMAKE_EXE_LINKER_FLAGS "${DCMAKE_EXE_LINKER_FLAGS} -fpic")
endif()

# if (Qt5_POSITION_INDEPENDENT_CODE)
#   SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
# endif()

add_src_and_test(viewport_widget)